kubelet/monitoring/kubernetes.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubebox
  labels:
    template: kubebox
spec:
  ports:
    - name: kubebox
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    name: kubebox
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubebox
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/rewrite-target: /kubebox
spec:
  rules:
  - http:
      paths:
      - path: /kubebox
        backend:
          serviceName: kubebox
          servicePort: 8080
    # TO BE UPDATED IF NEEDED
    # host:
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kubebox
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: kubebox
  template:
    metadata:
      name: kubebox
      labels:
        name: kubebox
    spec:
      serviceAccountName: kubebox
      containers:
      - image: astefanutti/kubebox:server
        imagePullPolicy: Always
        name: kubebox
        ports:
        - containerPort: 8080
          protocol: TCP
